--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Ignore node_modules folders in both Frontend and Backend
+Frontend/node_modules/
+Backend/node_modules/
 
-Frontend/node_modules
-Backend/node_modules
+# Ignore .env files in both Frontend and Backend
 Frontend/.env
 Backend/.env
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
