--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,10 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
@@ -19,6 +23,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
 }
